# 19bitbot-take-1

./: .env.example  .gitignore  LICENSE.txt  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: base.py  extensions_loader.py  init_logging.py
extensions/: my_command.py  my_context_menu.py  my_event.py  roles.py  soundboard_beat_box.py
interactions_test/: main.py  test_application_commands.py  test_components.py
twitch/: webhook_listener.py
